k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-kubecost
  labels:
    app: mcp-kubecost
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: mcp-kubecost
  template:
    metadata:
      labels:
        app: mcp-kubecost
    spec:
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        runAsNonRoot: true
      enableServiceLinks: false
      containers:
        - name: mcp-kubecost
          image: 297945954695.dkr.ecr.us-east-1.amazonaws.com/mcp-kubecost:0.2.28
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3030
            protocol: TCP
            name: http
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
              - ALL
